--- a/ejemploMinTic/app/build.gradle
+++ b/ejemploMinTic/app/build.gradle
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-
+    api 'com.google.android.material:material:1.5.0-beta01'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
